--- a/app/components/Input.module.css
+++ b/app/components/Input.module.css
@@ -1,7 +1,7 @@
 .wrapper {
   padding: 0.5rem;
   border: 1px solid #ccc;
-  border-radius: 4px;
+  border-radius: 0.5rem;
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
 }
 
