--- a/app/components/NavBar.module.css
+++ b/app/components/NavBar.module.css
@@ -2,6 +2,8 @@
   display: flex;
   width: 100%;
   height: 3rem;
-  background-color: red;
-  padding: 0.5rem;
+  background-color: white;
+  padding: 0.5rem 1rem;
+  box-shadow: 0 0.1rem 0.25rem rgba(0, 0, 0, 0.1);
+  z-index: 400;
 }
