--- a/app/components/NavBar.module.css
+++ b/app/components/NavBar.module.css
@@ -6,4 +6,7 @@
   padding: 0.5rem 1rem;
   box-shadow: 0 0.1rem 0.25rem rgba(0, 0, 0, 0.1);
   z-index: 400;
+  justify-content: space-between;
+  align-items: center;
+  column-gap: 1rem;
 }
