--- a/app/components/Header.module.css
+++ b/app/components/Header.module.css
@@ -1,5 +1,10 @@
 /* app/components/Header.module.css */
 
+.h1, .h2, .h3, .h4, .h5, .h6 {
+  text-transform: uppercase;
+  color: #474e2d;
+}
+
 .h1 {
   font-size: 2.5rem;
   margin-bottom: 1rem;
