--- a/app/components/NavBar.module.css
+++ b/app/components/NavBar.module.css
@@ -1,10 +1,11 @@
 .wrapper {
   display: flex;
   width: 100%;
-  height: 3rem;
+  height: 3.5rem;
   background-color: white;
-  padding: 0.5rem 1rem;
-  box-shadow: 0 0.1rem 0.25rem rgba(0, 0, 0, 0.1);
+  padding: 0rem 0.75rem;
+  border-radius: 1rem;
+  margin-bottom: 0.5rem;
   z-index: 400;
   justify-content: space-between;
   align-items: center;
