--- a/app/index.css
+++ b/app/index.css
@@ -1,6 +1,6 @@
 html {
   /* Set base font size for rem units */
-  font-size: 16px;
+  font-size: 20px;
 }
 
 *,
@@ -11,9 +11,11 @@ html {
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Fredoka", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+  font-variation-settings: "wdth" 100;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -21,6 +23,11 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Sour Gummy", sans-serif;
+  font-weight: 700;
 }
 
 /* Remove default margin and padding */
@@ -73,4 +80,14 @@ input, button, textarea, select {
     transition-duration: 0.01ms !important;
     scroll-behavior: auto !important;
   }
+}
+
+/* See: https://base-ui.com/react/overview/quick-start#:~:text=you%20actually%C2%A0use.-,Set%20up%20portals,-Base%C2%A0UI%20uses */
+.root {
+  isolation: isolate;
+}
+
+/* Unfortunately, Fredoka sits a bit low, so we have to adjust for it. */
+:root {
+  --fredoka-baseline-fix: -0.1em;
 }
