--- a/app/layouts/Primary.layout.module.css
+++ b/app/layouts/Primary.layout.module.css
@@ -1,12 +1,14 @@
 .wrapper {
   width: 100vw;
   height: 100vh;
-  background-color: green;
+  background-color: #cfd1dc;
   display: flex;
   flex-direction: column;
+  padding: 0.5rem 0.25rem;
 }
 
 .scrollWrapper {
+  border-radius: 1rem;
   background-color: white;
   container-type: inline-size;
   box-sizing: border-box;
@@ -21,7 +23,6 @@
 .content {
   background-color: white;
   padding: 2rem 1rem;
-  width: 100cqw;
   box-sizing: border-box;
   display: flex;
   align-items: center;
