--- a/app/components/Input.module.css
+++ b/app/components/Input.module.css
@@ -1,5 +1,6 @@
 .wrapper {
   padding: 0.5rem;
+  color: #403b34;
   border: 0.125rem solid #c4bead;
   border-radius: 0.5rem;
   transition: all 0.2s ease-in-out;
