--- a/app/components/Button.module.css
+++ b/app/components/Button.module.css
@@ -1,13 +1,9 @@
 .wrapper {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
+  padding-bottom: 0.125rem;
   transition: all 0.2s ease-in-out;
   background: none;
   border: none;
-}
-
-.wrapper:hover {
-  padding-bottom: 0rem;
+  box-sizing: border-box;
 }
 
 .wrapper:focus {
@@ -17,9 +13,8 @@
 .wrapper .innerWrapper {
   padding: 0.25rem 0.5rem;
   padding-top: calc(0.25rem + 0.125rem + var(--fredoka-baseline-fix));
-  border: 0.125rem solid #c4bead; /* Light Gray */
+  border: 0.125rem solid #c4bead;
   box-shadow: 0 0.125rem 0 #c4bead;
-  margin-top: -0.25rem;
   cursor: pointer;
   
   border-radius: 0.5rem;
@@ -31,6 +26,7 @@
 .wrapper:hover .innerWrapper {
   margin-top: 0;
   box-shadow: 0 0rem 0 #c4bead;
+  translate: 0 0.125rem;
 }
 
 .wrapper:active .innerWrapper{
