--- a/app/components/Form.module.css
+++ b/app/components/Form.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 100cqw;
+  width: 100%;
   max-width: 20rem;
   row-gap: 1rem; /* Adjust the gap as needed */
 }
