--- a/app/layouts/Primary.layout.module.css
+++ b/app/layouts/Primary.layout.module.css
@@ -23,6 +23,7 @@
 .content {
   background-color: white;
   padding: 2rem 1rem;
+  width: 100%;
   box-sizing: border-box;
   display: flex;
   align-items: center;
