--- a/app/components/Loading.module.css
+++ b/app/components/Loading.module.css
@@ -1,9 +1,32 @@
+.wrapper {
+  transition: all 0.2s ease-in-out;
+  user-select: none;
+  animation: loadingWrapper-show 600ms 300ms cubic-bezier(0.38, 0.97, 0.56, 0.76) forwards;
+  opacity: 0;
+  transform: translate(0, -1rem);
+}
+
+@keyframes loadingWrapper-show {
+  100% {
+    opacity: 1;
+    transform: translate(0, 0);
+  }
+}
+
+.wrapper.page {
+  margin-top: 4rem;
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
 .ellipsis, .ellipsis:before, .ellipsis:after {
   border-radius: 50%;
   width: 2.5em;
   height: 2.5em;
   animation-fill-mode: both;
-  animation: bblFadInOut 1.8s infinite ease-in-out;
+  animation: loading-bblFadInOut 1.8s infinite ease-in-out;
 }
 .ellipsis {
   color: #d9e80a;
@@ -27,7 +50,7 @@
   left: 3.5em;
 }
 
-@keyframes bblFadInOut {
+@keyframes loading-bblFadInOut {
   0%, 80%, 100% { box-shadow: 0 2.5em 0 -1.3em }
   40% { box-shadow: 0 2.5em 0 0 }
 }
@@ -54,10 +77,10 @@
   top: 0;
   left: 0;
   box-sizing: border-box;
-  animation: animloader 2s linear infinite;
+  animation: loading-animloader 2s linear infinite;
 }
 
-@keyframes animloader {
+@keyframes loading-animloader {
   0% {
     left: 0;
     transform: translateX(-100%);
@@ -80,11 +103,11 @@
   border-radius: 50%;
   position: relative;
   text-indent: -9999em;
-  animation: mulShdSpin 1.3s infinite linear;
+  animation: loading-mulShdSpin 1.3s infinite linear;
   transform: translateZ(0);
 }
 
-@keyframes mulShdSpin {
+@keyframes loading-mulShdSpin {
   0%,
   100% {
     box-shadow: 0 -3em 0 0.2em, 
