--- a/app/components/Input.module.css
+++ b/app/components/Input.module.css
@@ -1,4 +1,22 @@
-.wrapper {
+.textLabel {
+  font-size: 0.75rem;
+  margin-left: 0.52rem;
+  margin-bottom: 0.125rem;
+  display: block;
+  color: #474e2d;
+  text-transform: uppercase;
+}
+
+.helper {
+  font-size: 0.75rem;
+  margin-left: 0.52rem;
+  margin-top: 0.125rem;
+  display: block;
+  color: #948c70;
+}
+
+.input {
+  width: 100%;
   padding: 0.5rem;
   color: #403b34;
   border: 0.125rem solid #c4bead;
@@ -6,8 +24,57 @@
   transition: all 0.2s ease-in-out;
 }
 
-.wrapper:focus {
+.input:focus {
   outline: none;
   border-color: #d9e80a;
   box-shadow: inset 0 0 0.25rem #e5f017;
+}
+
+.input:read-only {
+  background-color: #eeefe9;
+  color: #403b34;
+  border: 0.125rem solid #c4bead00;
+  border-bottom: 0.125rem dashed #c4bead;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.input:read-only:focus {
+  outline: none;
+  box-shadow: none;
+}
+
+.error .textLabel,
+.error .helper,
+.error .input {
+  color: #d01a4a;
+  border-color: #d01a4a;
+}
+
+.error .input:focus {
+  outline: none;
+  box-shadow: inset 0 0 0 0.125rem #d01a4a99;
+}
+
+.inputWrapper {
+  position: relative;
+}
+
+.icon {
+  position: absolute;
+  width: 2rem;
+  height: 2rem;
+  top: 0.25rem;
+  right: 0.45rem;
+  padding: 0.125rem;
+  background-color: canvas;
+}
+
+.icon > svg {
+  width: 100%;
+  height: 100%;
+}
+
+.error .icon > svg {
+  fill: #d01a4a;
 }
