--- a/app/components/Section.module.css
+++ b/app/components/Section.module.css
@@ -4,4 +4,14 @@
   gap: 1rem;
   width: 100%;
   box-sizing: border-box;
+  animation: sectionWrapper-show 300ms 0ms cubic-bezier(0.38, 0.97, 0.56, 0.76) forwards;
+  opacity: 0;
+  transform: translate(0, -0.5rem);
+}
+
+@keyframes sectionWrapper-show {
+  100% {
+    opacity: 1;
+    transform: translate(0, 0);
+  }
 }
