--- a/app/components/Button.module.css
+++ b/app/components/Button.module.css
@@ -19,12 +19,12 @@
   cursor: pointer;
   
   border-radius: 0.5rem;
-  transition: background-color 0.2s ease-in-out;
   min-height: 2.5rem;
   transition: all 0.2s ease-in-out;
 }
 
-.wrapper:hover .innerWrapper {
+.wrapper:hover .innerWrapper,
+.wrapper:disabled .innerWrapper {
   margin-top: 0;
   box-shadow: 0 0rem 0 #c4bead;
   translate: 0 0.125rem;
@@ -64,4 +64,11 @@
 
 .secondary:hover .innerWrapper {
   background-color: #d6d6c7;
+}
+
+.wrapper:disabled .innerWrapper {
+  background-color: #dedede;
+  color: #909090;
+  cursor: not-allowed;
+  border-color: #c8c8c8;
 }
