--- a/app/components/Section.module.css
+++ b/app/components/Section.module.css
@@ -7,6 +7,8 @@
   animation: sectionWrapper-show 300ms 0ms cubic-bezier(0.38, 0.97, 0.56, 0.76) forwards;
   opacity: 0;
   transform: translate(0, -0.5rem);
+  max-width: 50rem;
+  align-self: flex-start;
 }
 
 @keyframes sectionWrapper-show {
