--- a/app/components/Header.module.css
+++ b/app/components/Header.module.css
@@ -1,4 +1,9 @@
 /* app/components/Header.module.css */
+.h1, .h2, .h3, .h4, .h5, .h6 {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
 
 .h1, .h2, .h3, .h6 {
   text-transform: uppercase;
