--- a/app/components/Header.module.css
+++ b/app/components/Header.module.css
@@ -1,8 +1,12 @@
 /* app/components/Header.module.css */
-.h1, .h2, .h3, .h4, .h5, .h6 {
+.wrapper {
   display: flex;
   align-items: center;
   gap: 0.5rem;
+}
+
+.h1, .h2, .h3, .h4, .h5, .h6 {
+  overflow-wrap: break-word;
 }
 
 .h1, .h2, .h3, .h6 {
