--- a/app/components/Switch.module.css
+++ b/app/components/Switch.module.css
@@ -20,7 +20,7 @@
   background-size: 6.5rem 100%;
   background-position-x: 100%;
   background-repeat: no-repeat;
-  transition-property: background-position, box-shadow, background-color;
+  transition-property: all;
   transition-timing-function: cubic-bezier(0.26, 0.75, 0.38, 0.45);
   transition-duration: 125ms;
   cursor: pointer;
@@ -70,6 +70,7 @@
 
 .switch:disabled {
   opacity: 0.5;
+  filter: grayscale(100%);
   cursor: not-allowed;
 
   &[data-checked] {
@@ -85,6 +86,11 @@
   }
 }
 
-.switch:disabled .thumb {
-  border-color: #c8c8c8;
+.label {
+  color: #403b34;
+  transition: all 250ms ease;
+}
+
+.disabled .label {
+  color: #909090;
 }
