--- a/app/layouts/Primary.layout.module.css
+++ b/app/layouts/Primary.layout.module.css
@@ -10,7 +10,9 @@
 .scrollWrapper {
   border-radius: 1rem;
   background-color: white;
-  border: 1rem solid white;
+  border-top: 1rem solid white;
+  border-bottom: 1rem solid white;
+  padding: 0 1rem;
   container-type: inline-size;
   box-sizing: border-box;
   /* Take up the remaining space */
