--- a/app/components/Icons/SaveState.module.css
+++ b/app/components/Icons/SaveState.module.css
@@ -2,8 +2,8 @@
   position: relative;
   animation: sectionWrapper-show 300ms 300ms cubic-bezier(0.38, 0.97, 0.56, 0.76) forwards;
   opacity: 0;
-  width: 100%;
-  height: 100%;
+  aspect-ratio: 1 / 1;;
+  width: calc(24px + 12px);
 }
 
 .fade {
