--- a/app/components/Card.module.css
+++ b/app/components/Card.module.css
@@ -1,5 +1,5 @@
 .wrapper {
-  padding-bottom: 0.125rem;
+  padding-bottom: 0;
   width: 100%;
 }
 
@@ -7,7 +7,7 @@
   border-radius: 1rem;
   background-color: canvas;
   border: 0.125rem solid #c4bead;
-  box-shadow: 0 0.125rem 0 #c4bead;
+  box-shadow: 0 0rem 0 #c4bead;
   padding: 1rem;
   transition: all 0.2s ease-in-out;
   min-height: 2.5rem;
@@ -23,6 +23,12 @@
 
 .clickable {
   cursor: pointer;
+  padding-bottom: 0.125rem;
+}
+
+.clickable .innerWrapper {
+  transition: all 0.1s ease-in-out;
+  box-shadow: 0 0.125rem 0 #c4bead;
 }
 
 .clickable .innerWrapper:hover {
