--- a/app/components/FloatingMenu.module.css
+++ b/app/components/FloatingMenu.module.css
@@ -1,5 +1,5 @@
 .wrapper {
-  background: white;
+  background: var(--innerBaseBackgroundColor);
   border-radius: 0.5rem;
   box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.2);
   padding: 0.5rem;
