--- a/app/components/Input.module.css
+++ b/app/components/Input.module.css
@@ -1,10 +1,15 @@
-.textLabel {
+.textLabel,
+.textLabelMenu {
   font-size: 0.75rem;
   margin-left: 0.52rem;
   margin-bottom: 0.125rem;
   display: block;
-  color: #474e2d;
+  color: var(--primaryBackgroundColorHover);
   text-transform: uppercase;
+}
+
+.textLabelMenu {
+  margin-bottom: -0.875rem;
 }
 
 .helper {
@@ -12,29 +17,36 @@
   margin-left: 0.52rem;
   margin-top: 0.125rem;
   display: block;
-  color: #948c70;
+  color:  var(--helperTextColor);
 }
 
-.input {
+.input,
+.inputMenu {
   width: 100%;
   padding: 0.5rem;
-  color: #403b34;
-  border: 0.125rem solid #c4bead;
+  color: var(--secondaryTextColor);
+  border: 0.125rem solid var(--borderColor);
   border-radius: 0.5rem;
   transition: all 0.2s ease-in-out;
 }
 
-.input:focus {
+.inputMenu:hover {
+  border-color:  var(--primaryBorderColor);
+  background-color: var(--secondaryBackgroundColorHover);
+}
+
+.input:focus,
+.inputMenu:focus {
   outline: none;
-  border-color: #d9e80a;
-  box-shadow: inset 0 0 0.25rem #e5f017;
+  border-color: var(--borderFocusColor);
+  box-shadow: inset 0 0 0.25rem var(--boxShadowFocusColor);
 }
 
 .input:read-only {
-  background-color: #eeefe9;
-  color: #403b34;
-  border: 0.125rem solid #c4bead00;
-  border-bottom: 0.125rem dashed #c4bead;
+  background-color: var(--secondaryBackgroundColor);
+  color: var(--secondaryTextColor);
+  border: 0.125rem solid var(--borderColor)00;
+  border-bottom: 0.125rem dashed var(--borderColor);
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
@@ -47,13 +59,13 @@
 .error .textLabel,
 .error .helper,
 .error .input {
-  color: #d01a4a;
-  border-color: #d01a4a;
+  color:  var(--errorTextColor);
+  border-color: var(--errorBorderColor);
 }
 
 .error .input:focus {
   outline: none;
-  box-shadow: inset 0 0 0 0.125rem #d01a4a99;
+  box-shadow: inset 0 0 0 0.125rem var(--errorFocusBoxShadowColor);
 }
 
 .inputWrapper {
@@ -81,5 +93,5 @@
 }
 
 .error .icon > svg {
-  fill: #d01a4a;
+  fill: var(--errorFillColor);
 }
