--- a/app/components/Loading.module.css
+++ b/app/components/Loading.module.css
@@ -29,7 +29,7 @@
   animation: loading-bblFadInOut 1.8s infinite ease-in-out;
 }
 .ellipsis {
-  color: #d9e80a;
+  color: var(--borderFocusColor);
   font-size: 7px;
   position: relative;
   text-indent: -9999em;
@@ -67,7 +67,7 @@
   content: '';
   width: 192px;
   height: 4.8px;
-  background: #d9e80a;
+  background: var(--borderFocusColor);
   position: absolute;
   top: 0;
   left: 0;
@@ -87,7 +87,7 @@
 }
 
 .spinner {
-  color: #d9e80a;
+  color: var(--borderFocusColor);
   font-size: 10px;
   width: 1em;
   height: 1em;
