--- a/app/components/NavBar.module.css
+++ b/app/components/NavBar.module.css
@@ -2,7 +2,7 @@
   display: flex;
   width: 100%;
   height: 3.5rem;
-  background-color: white;
+  background-color: var(--innerBaseBackgroundColor);
   padding: 0rem 0.75rem;
   border-radius: 1rem;
   margin-bottom: 0.5rem;
