--- a/app/index.css
+++ b/app/index.css
@@ -1,7 +1,7 @@
 html {
   /* Set base font size for rem units */
   font-size: 20px;
-  background-color: #cfd1dc;
+  background-color:  var(--baseBackgroundColor);
 }
 
 *,
@@ -15,7 +15,7 @@ body {
   font-family: "Fredoka", sans-serif;
   font-optical-sizing: auto;
   font-weight: 500;
-  color: #403b34;
+  color: var(--secondaryTextColor);
   line-height: auto;
   font-style: normal;
   font-variation-settings: "wdth" 100;
