--- a/app/components/Button.module.css
+++ b/app/components/Button.module.css
@@ -7,6 +7,10 @@
   max-width: 20rem;
 }
 
+.wrapper.noTextWrap {
+  overflow: hidden;
+}
+
 .wrapper:focus {
   outline: none;
 }
@@ -21,6 +25,12 @@
   border-radius: 0.5rem;
   min-height: 2.5rem;
   transition: all 0.2s ease-in-out;
+}
+
+.wrapper.noTextWrap .innerWrapper {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .wrapper:hover .innerWrapper,
@@ -39,6 +49,11 @@
   border-color: var(--borderFocusColor);
   box-shadow: 0 0 0.5rem var(--boxShadowFocusColor);
   outline: none;
+}
+
+.wrapper.noTextWrap:focus .innerWrapper {
+  /* Box-shadow gets clipped by overflow: hidden */
+  box-shadow: none;
 }
 
 .primary .innerWrapper {
