--- a/app/components/Menu.module.css
+++ b/app/components/Menu.module.css
@@ -108,3 +108,12 @@
 .trigger:hover .textTriggerTextIcon svg {
   fill: var(--primaryBorderColor);
 }
+
+.separator {
+  width: 100%;
+  height: 2px;
+  background-color: var(--borderColor);
+  border-radius: 1rem;
+  margin: 0.125rem 0;
+  opacity: 0.5;
+}
