--- a/app/components/Paragraph.module.css
+++ b/app/components/Paragraph.module.css
@@ -2,3 +2,11 @@
   font-size: 0.875rem;
   color:  var(--captionTextColor);
 }
+
+.overline {
+  font-size: 0.875rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: var(--captionTextColor);
+  margin-bottom: -1rem;
+}
