--- a/app/layouts/Primary.layout.module.css
+++ b/app/layouts/Primary.layout.module.css
@@ -29,8 +29,8 @@
   width: 100%;
   box-sizing: border-box;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(min(20rem, 100%), 1fr));
   grid-auto-rows: minmax(10rem, auto);
   gap: 1rem;
-  max-width: 50rem;
+  max-width: 41rem;
 }
