private public data and sparse data updates

--- a/app/components/Button.module.css
+++ b/app/components/Button.module.css
@@ -4,7 +4,7 @@
   background: none;
   border: none;
   box-sizing: border-box;
-  max-width: 20rem;
+  max-width: var(--formWidth);
 }
 
 .wrapper.noTextWrap {
