--- a/app/layouts/Primary.layout.module.css
+++ b/app/layouts/Primary.layout.module.css
@@ -29,7 +29,7 @@
   width: 100%;
   box-sizing: border-box;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(min(20rem, 100%), 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(min(var(--formWidth), 100%), 1fr));
   grid-auto-rows: minmax(10rem, auto);
   gap: 1rem;
   max-width: 41rem;
